k8s/services/immich/app/server/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: immich-server
spec:
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 2283
      targetPort: http
      protocol: TCP
