k8s/services/immich/app/server/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - photos.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: immich-server
          port: 2283
      timeouts:
        request: 600s
