k8s/services/immich/app/server/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-http01
    nginx.ingress.kubernetes.io/proxy-body-size: "50000m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/server-snippet: |
      send_timeout 600s;
spec:
  rules:
    - host: photos.lama-corp.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: immich-server
                port:
                  name: http
  tls:
    - hosts:
        - photos.lama-corp.space
      secretName: immich-tls
